# GaiaCMD

./: .gitignore  README.md  pyproject.toml
gaiacmd/: __init__.py  cli.py  cmd.py
notebooks/: example_usage.ipynb
