[build-system]
requires      = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name            = "gaiacmd"
version         = "0.1.0"
description     = "Gaia CMD plotter for TESS white dwarf pulsation catalogs"
requires-python = ">=3.9"
license         = "MIT"
dependencies    = [
    "matplotlib",
    "numpy",
    "pandas",
    "astropy",
    "astroquery",
    "lightkurve",
]

[project.urls]
Homepage   = "https://github.com/Nikoohn/GaiaCMD"
Repository = "https://github.com/Nikoohn/GaiaCMD"

[tool.setuptools.packages.find]
include = ["gaiacmd*"]